Attempt to fix layout problems (Con'd, attempting to put comments in footer)

--- a/css/master.css
+++ b/css/master.css
@@ -125,10 +125,6 @@ a:hover {
   height: 40%;
 }
 
-.utterances {
-  position: absolute;
-}
-
 /* .bg {
   width: 100%;
 }
